--- a/app/flaskr/templates/album.html
+++ b/app/flaskr/templates/album.html
@@ -43,6 +43,8 @@
         <button class="footer-button" onclick="pageparametre()"><img src="../static/img/parametres.png" alt="icone-setting" class="icone-setting"></button>
     </footer>
 
-    <script src="../static/js/main.js"></script>
+    <script>function pagealbumtest() {
+        window.location.href = "/album-photo";
+      }</script>
 </body>
 </html>
