--- a/app/flaskr/templates/pagealbumex.html
+++ b/app/flaskr/templates/pagealbumex.html
@@ -70,10 +70,7 @@
 
             <div class="fourth">
               <span>18</span>
-              <span class="day-container">
-                <span>19</span>
-                <span class="nbphoto">2</span>
-              </span>
+              <span>19</span>
               <span>20</span>
               <span>21</span>
               <span>22</span>
@@ -93,7 +90,10 @@
           </div>
         </div>
       </div>
+    
     </div>
+  </div>
+
   </div>
   <footer>
     <button class="footer-button" onclick="pageamis()"><img src="../static/img/amis.png" alt="icone-friends" class="icone-friends"></button>
@@ -103,4 +103,5 @@
     <button class="footer-button" onclick="pageparametre()"><img src="../static/img/parametres.png" alt="icone-setting" class="icone-setting"></button>
   </footer>
 </body>
+
 </html>
