--- a/app/flaskr/static/css/pagealbumex.css
+++ b/app/flaskr/static/css/pagealbumex.css
@@ -20,14 +20,22 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+/* Ajoutez des transitions pour l'effet de fondu */
 .container {
-  align-items: center;
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  margin: 0 auto;
-  max-width: 600px;
-  width: 100%;
+  transition: opacity 0.5s ease-in-out;
+}
+
+/* Style pour le bouton */
+.show-calendar-button {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #4CAF50;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
 }
 
 .calendar {
@@ -207,6 +215,10 @@ body {
   cursor: pointer;
 }
 
+.actions button:active {
+  background: #5889a0;
+  outline: none;
+}
 
 /* Flip animation */
 
@@ -217,6 +229,7 @@ body {
 .front, .back {
   backface-visibility: hidden;
 }
+
 
 
 
