--- a/app/flaskr/templates/parametres.html
+++ b/app/flaskr/templates/parametres.html
@@ -17,6 +17,35 @@
     </header>
 
     <main>
+        <div>
+            <div class="setting-item">
+                <span class="setting-name"></span>
+            </div>
+            <div class="setting-item">
+                <span class="setting-name"></span>
+            </div>
+            <div class="setting-item">
+                <span class="setting-name"></span>
+            </div>
+            <div class="setting-item">
+                <span class="setting-name"></span>
+            </div>
+            <div class="setting-item">
+                <span class="setting-name"></span>
+            </div>
+            <div class="setting-item">
+                <span class="setting-name"></span>
+            </div>
+            <div class="setting-item">
+                <span class="setting-name"></span>
+            </div>
+            <div class="setting-item">
+                <span class="setting-name"></span>
+            </div>
+            <div class="setting-item">
+                <span class="setting-name"></span>
+            </div>
+        </div>
         <h3>Application</h3>
         <div class="settings-list">
             <div class="setting-item">
