--- a/app/flaskr/static/css/page-parametre.css
+++ b/app/flaskr/static/css/page-parametre.css
@@ -92,10 +92,9 @@ footer {
 }
 
 footer img {
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  transition: transform 0.3s;
+  width: 30px;
+  height: 30px;
+  transition: transform 0.2s ease-in-out;
 }
 
 footer img:hover {
@@ -208,7 +207,6 @@ input:checked + .slider:before {
 }
 
 .input-adresse-mail input {
-  width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
