--- a/app/flaskr/templates/parametres.html
+++ b/app/flaskr/templates/parametres.html
@@ -132,8 +132,8 @@
         </div>
     </main>
     
-    <div class="save-btn">
-        <button id="saveSettings">Sauvegarder les réglages</button>
+    <div class="sert-a-rien">
+        <button>Easter EGG ???</button>
     </div>
 
     <footer>
