--- a/app/flaskr/templates/auth/login.html
+++ b/app/flaskr/templates/auth/login.html
@@ -6,6 +6,7 @@
     <link rel="icon"    type="image/png" href="../../static/img/logo_E-esprit.png">
     <link rel="stylesheet" href="../../static/css/Styles-Body.css">
     <link rel="stylesheet" href="../../static/css/page-login.css">
+    <script src="../../static/js/theme.js"></script>
     <title>Login | E-spirit</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
         <h2>Connexion</h2>
         <form action="" method="POST"> 
             <div class="form-group">
-                <label for="username">Nom d'utilisateur</label>
+                <label for="username">Nom d'utilisateur / Adresse mail</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
