--- a/app/flaskr/templates/auth/signup.html
+++ b/app/flaskr/templates/auth/signup.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon"    type="image/png" href="../../static/img/logo_E-esprit.ico">
+    <link rel="icon"    type="image/png" href="../../static/img/logo_E-esprit.png">
     <link rel="stylesheet" href="../../static/css/Styles-Body.css">
     <link rel="stylesheet" href="../../static/css/page-register.css">
+    <script src="../../static/js/theme.js"></script>
     <title>Register | E-spirit</title>
 </head>
 <body>
@@ -21,6 +22,10 @@
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
+                <label for="email">Adresse Mail</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
                 <label for="password">Mot de passe</label>
                 <input type="password" id="password" name="password" required>
             </div>
@@ -28,7 +33,7 @@
                 <label for="password">Mot de passe</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit">Se connecter</button>
+            <button type="submit">Créer un compte</button>
         </form>
         <p class="signup-link">Vous possédez déjà un compte ?<a href="/login">Connectez-vous</a></p>
     </div>
