--- a/app/flaskr/templates/pagealbumex.html
+++ b/app/flaskr/templates/pagealbumex.html
@@ -8,7 +8,8 @@
     <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.ico">
     <script src="../static/js/main.js"></script>
     <script src="../static/js/album.js"></script>
-</head>
+    <script src="../static/js/theme.js"></script>
+  </head>
 <body>
   <header>
     <img src="../static/img/imagespp.jpeg" alt="Photo" class="ta-pp">
@@ -94,7 +95,6 @@
     </div>
   </div>
 
-  </div>
   <footer>
     <button class="footer-button" onclick="pageamis()"><img src="../static/img/amis.png" alt="icone-friends" class="icone-friends"></button>
     <button class="footer-button" onclick="pagecam()"><img src="../static/img/camera.png" alt="icone-cam" class="icone-cam"></button>
@@ -102,6 +102,9 @@
     <button class="footer-button" onclick="pagealbum()"><img src="../static/img/album-photo.png" alt="icone-album" class="icone-album"></button>
     <button class="footer-button" onclick="pageparametre()"><img src="../static/img/parametres.png" alt="icone-setting" class="icone-setting"></button>
   </footer>
-</body>
 
+  <!-- Add a button to the page, initially hidden -->
+  <button class="show-calendar-button" style="display: none;">Afficher le calendrier</button>
+
+</body>
 </html>
