hmm c vrm cho album

--- a/app/alpha/flaskr/templates/pagealbumex.html
+++ b/app/alpha/flaskr/templates/pagealbumex.html
@@ -41,52 +41,49 @@
               <span class="last-month">29</span>
               <span class="last-month">30</span>
               <span class="last-month">31</span>
-              <span>01</span>
-              <span>02</span>
-              <span>03</span>
+              <span class="cemoi">01</span>
+              <span class="cemoi">02</span>
+              <span class="cemoi">03</span>
             </div>
 
             <div class="second">
-              <span>04</span>
-              <span>05</span>
-              <span class="day-container">
-                <span>06</span>
-                <span class="nbphoto">+9</span>
-              </span>
-              <span>07</span>
-              <span>08</span>
-              <span>09</span>
-              <span>10</span>
+              <span class="cemoi">04</span>
+              <span class="cemoi">05</span>
+              <span class="cemoi">06</span>
+              <span class="cemoi">07</span>
+              <span class="cemoi">08</span>
+              <span class="cemoi">09</span>
+              <span class="cemoi">10</span>
             </div>
 
             <div class="third">
-              <span>11</span>
-              <span>12</span>
-              <span>13</span>
-              <span>14</span>
-              <span>15</span>
-              <span>16</span>
-              <span>17</span>
+              <span class="cemoi">11</span>
+              <span class="cemoi">12</span>
+              <span class="cemoi">13</span>
+              <span class="cemoi">14</span>
+              <span class="cemoi">15</span>
+              <span class="cemoi">16</span>
+              <span class="cemoi">17</span>
             </div>
 
             <div class="fourth">
-              <span>18</span>
-              <span>19</span>
-              <span>20</span>
-              <span>21</span>
-              <span>22</span>
-              <span>23</span>
-              <span>24</span>
+              <span class="cemoi">18</span>
+              <span class="cemoi">19</span>
+              <span class="cemoi">20</span>
+              <span class="cemoi">21</span>
+              <span class="cemoi">22</span>
+              <span class="cemoi">23</span>
+              <span class="cemoi">24</span>
             </div>
 
             <div class="fifth">
-              <span>25</span>
-              <span>26</span>
-              <span>27</span>
-              <span>28</span>
-              <span>29</span>
-              <span>30</span>
-              <span>31</span>
+              <span class="cemoi">25</span>
+              <span class="cemoi">26</span>
+              <span class="cemoi">27</span>
+              <span class="cemoi">28</span>
+              <span class="cemoi">29</span>
+              <span class="cemoi">30</span>
+              <span class="cemoi">31</span>
             </div>
           </div>
         </div>
