--- a/app/alpha/flaskr/static/css/pagealbumex.css
+++ b/app/alpha/flaskr/static/css/pagealbumex.css
@@ -52,6 +52,16 @@ body {
   opacity: 1;
 }
 
+.container {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 600px;
+  width: 100%;
+}
+
 .calendar {
   background: #2b4450;
   border-radius: 4px;
@@ -62,7 +72,6 @@ body {
   transform-style: preserve-3d;
   width: 100%;
 }
-
 /* Front - Calendar */
 .front {
   transform: rotateY(0deg);
@@ -126,28 +135,13 @@ body {
   padding: 10px;
 }
 
-.weeks span:not(.last-month):hover {
+.weeks span:hover {
   cursor: pointer;
   font-weight: 600;
 }
 
 .day-container {
   position: relative;
-}
-
-.nbphoto {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 10px;
-  height: 10px;
-  top: 0;
-  right: 0;
-  border-radius: 50%;
-  background-color: #ff6a00;
-  color: #fff;
-  font-size: 12px;
 }
 
 
