--- a/app/alpha/flaskr/static/css/page-register.css
+++ b/app/alpha/flaskr/static/css/page-register.css
@@ -37,7 +37,9 @@ label {
 
 input[type="text"],
 input[type="email"],
-input[type="password"] {
+input[type="password"],
+input[type="tel"],
+input[type="name"] {
     width: 100%;
     padding: 8px 10px;
     border: 1px solid #ccc;
