--- a/app/alpha/flaskr/templates/auth/signup.html
+++ b/app/alpha/flaskr/templates/auth/signup.html
@@ -15,11 +15,23 @@
         <div class="shape"></div>
     </div>
     <div class="login-container">
-        <h2>Connexion</h2>
+        <h2>Inscription</h2>
         <form action="" method="POST"> 
             <div class="form-group">
-                <label for="username">Nom d'utilisateur</label>
-                <input type="text" id="username" name="username" required>
+                <label for="name">Prénom</label>
+                <input type="name" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="name">Nom</label>
+                <input type="name" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="tel">Numérau de téléphone</label>
+                <input type="tel" id="tel" name="tel">
+            </div>
+            <div class="form-group">
+                <label for="text">Nom d'utilisateur</label>
+                <input type="text" id="text" name="text" required minlength="3">
             </div>
             <div class="form-group">
                 <label for="email">Adresse Mail</label>
@@ -27,11 +39,11 @@
             </div>
             <div class="form-group">
                 <label for="password">Mot de passe</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" required minlength="5">
             </div>
             <div class="form-group">
                 <label for="password">Mot de passe</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" required minlength="5">
             </div>
             <button type="submit">Créer un compte</button>
         </form>
